G_DIETPI-NOTIFY | Added initiating program name, to start of line print.

Bug Fixes:
General | Resolved an issue where externally launched DietPi-Config with target menu, (eg: dietpi-config 8 1) had no effect. EG: fail connection, should go straight to networking submenu.
DietPi-Config | AudioPhonics I-Sabre-K2M: Resolved issue with failed installation. This is now a source build ondemand: https://github.com/Fourdee/DietPi/issues/1437
DietPi-Services | OpenVPN and DNSMASQ (PiHole): Are no longer controlled. This is to prevent unexpected loss of connection during DietPi scripts: https://github.com/Fourdee/DietPi/issues/1501
DietPi-Software | Nginx: Resolved failed installation when IPv6 is disabled, thanks @MichaIng: https://github.com/Fourdee/DietPi/pull/1441
DietPi-Software | OpenVPN Server: Resolved failed installation under Debian Stretch: https://github.com/Fourdee/DietPi/issues/1450
DietPi-Software | Resolved an issue where uninstalling multiple items, could result in endless loop: https://github.com/Fourdee/DietPi/issues/1454
DietPi-LetsEncrypt | Work around a non-DietPi issue, that prevents certificate renewal via Apache and Nginx on Stretch systems: https://github.com/Fourdee/DietPi/issues/734#issuecomment-361774084
DietPi-Software | phpMyAdmin: Its new default MariaDB user 'phpmyadmin' now has full admin privileges: http://dietpi.com/phpbb/viewtopic.php?f=11&t=2775
DietPi-Software | RPi.GPIO: Resolved failed installation.
DietPi-Software | Raspcontrol: Resolved an issue with missing webserver stack pre-req: https://github.com/Fourdee/DietPi/issues/1485
DietPi-Software | Resolved an issue where an existing higher GPU mem split, would be overridden with a lower value, during install of certain software: https://github.com/Fourdee/DietPi/issues/1484
DietPi-Software | qBitTorrent: Resolved issue with login on Debian Jessie, the default password is now 'adminadmin': https://github.com/Fourdee/DietPi/issues/1499

Allo Web Interface v6: