@@ -25,7 +25,7 @@
 	# - Exit DietPi-Config when going back to previous menu?
 	if [[ $2 =~ ^-?[0-9]+$ ]]; then
 		EXITONBACK=$2
-		TEXT_MENU_BACK="Exit"
+		TEXT_MENU_BACK='Exit'
 	fi
 
 	#Import DietPi-Globals ---------------------------------------------------------------
@@ -2278,17 +2278,12 @@
 
 			dpkg-reconfigure locales
 
-			local locale_new=$(grep -m1 '^LANG=' /etc/default/locale | sed 's/.*=//')
+			if (( ! $(grep -ci -m1 '^en_GB.UTF-8' /etc/locale.gen) )); then
 
-			#	Sanity, No result, revert back to default
-			if [ -z "$locale_new" ]; then
-
-				locale_new='en_GB.UTF-8'
+				export G_WHIP_MSG_TEXT='ERROR (locale):\n\nDietPi was unable to detect the presence of en_GB.UTF-8. This MUST be installed for DietPi scripts to function.\n\nPlease re-select the locales option and enable en_GB.UTF-8 on the 1st page. Afterwards you can select any desired default locale.'
+				G_WHIP_MSG
 
 			fi
-
-			# - Re-apply locale + auto install en_GB.UTF-8 alongside
-			/DietPi/dietpi/func/dietpi-set_software locale "$locale_new"
 
 			#Return to this menu
 			TARGETMENUID=7
