@@ -92,15 +92,17 @@
 	# HW_MANUFACTURER_NAME
 	#////////////////////////////////////
 
+	#-----------------------------------------------------------------------------------
+	#Set locale for all scripts, prevents incorrect scraping
+	LANG=en_GB.UTF-8
+	LC_ALL=en_GB.UTF-8
+	#Ensure we are in users home dir: https://github.com/Fourdee/DietPi/issues/905#issuecomment-298223705
+	cd "$HOME"
+	#-----------------------------------------------------------------------------------
+
 	#Import DietPi-Globals ---------------------------------------------------------------
 	#. /DietPi/dietpi/func/dietpi-globals
 	#Import DietPi-Globals ---------------------------------------------------------------
-
-	#Force en_GB Locale for whole script. Prevents incorrect parsing with non-english locales.
-	LANG=en_GB.UTF-8
-
-	#Ensure we are in users home dir: https://github.com/Fourdee/DietPi/issues/905#issuecomment-298223705
-	cd "$HOME"
 
 	#/////////////////////////////////////////////////////////////////////////////////////
 	#Obtain Hardware Model index
