@@ -19,11 +19,13 @@
 	# - /DietPi/dietpi/dietpi-ramlog 1				= Shutdown Phase (saves /var/log)
 	#////////////////////////////////////
 
-	#Force en_GB Locale for whole script. Prevents incorrect parsing with non-english locales.
+	#-----------------------------------------------------------------------------------
+	#Set locale for all scripts, prevents incorrect scraping
 	LANG=en_GB.UTF-8
-
+	LC_ALL=en_GB.UTF-8
 	#Ensure we are in users home dir: https://github.com/Fourdee/DietPi/issues/905#issuecomment-298223705
 	cd "$HOME"
+	#-----------------------------------------------------------------------------------
 
 	INPUT=0
 
