@@ -15,19 +15,22 @@
 	# Excluded scripts, which do NOT load these globals
 	# - dietpi-ramlog
 	# - dietpi-ramdisk
+	# - dietpi-obtain_hw_model
 	# - dietpi.txt (and all other .txt .ini or config files)
 	#
 	#////////////////////////////////////
 
 	#-----------------------------------------------------------------------------------
-	# Core var's, functions, environment. Used at start of all scripts.
-	#-----------------------------------------------------------------------------------
-	#Prevent incorrect parsing with non-english locales.
+	#Set locale for all scripts, prevents incorrect scraping
 	LANG=en_GB.UTF-8
-
+	LC_ALL=en_GB.UTF-8
 	#Ensure we are in users home dir: https://github.com/Fourdee/DietPi/issues/905#issuecomment-298223705
 	cd "$HOME"
+	#-----------------------------------------------------------------------------------
 
+	#-----------------------------------------------------------------------------------
+	# Core var's, functions, environment. Used at start of all scripts.
+	#-----------------------------------------------------------------------------------
 	#To be exported by the originating script (eg: dietpi-software)
 	# - Used in:
 	#	G_ERROR_ (info)
@@ -57,13 +60,7 @@
 
 	fi
 
-	#DEBUG:
-	# echo $G_USER_INPUTS
-	# shopt login_shell
-	# sleep 1
-	#DEBUG:
-
-	# - DietPi Scripts, moved from /etc/bash.bashrc
+	#DietPi Scripts, moved from /etc/bash.bashrc
 	alias sudo='sudo ' # https://github.com/Fourdee/DietPi/issues/424
 	alias dietpi-process_tool='/DietPi/dietpi/dietpi-process_tool'
 	alias dietpi-letsencrypt='/DietPi/dietpi/dietpi-letsencrypt'
@@ -95,8 +92,24 @@
 	[ -f /var/www/owncloud/occ ] && occ(){ sudo -u www-data php /var/www/owncloud/occ "$@"; }
 	[ -f /var/www/nextcloud/occ ] && ncc(){ sudo -u www-data php /var/www/nextcloud/occ "$@"; }
 
-	# - Treesize
-	#	$1 = Optional input directory (eg: G_TREESIZE /etc/apt)
+	#INIT functions
+	# - HIERARCHY system for G_DIETPI-NOTIFY 3
+	G_INIT_HIERARCHY(){
+
+		[ -n "$HIERARCHY" ] && export HIERARCHY=$((HIERARCHY+1)) || export HIERARCHY=0
+
+		# - Auto print init header for all scripts
+		# if [ -n "$G_PROGRAM_NAME" ]; then
+
+			# G_DIETPI-NOTIFY 3 "$G_PROGRAM_NAME" 'Init'
+
+		# fi
+
+
+	}
+
+	#Treesize
+	# - $1 = Optional input directory (eg: G_TREESIZE /etc/apt)
 	G_TREESIZE()
 	{
 
@@ -115,21 +128,6 @@
 			print $0;
 		}
 		'
-	}
-
-	#HIERARCHY system for G_DIETPI-NOTIFY 3
-	G_INIT_HIERARCHY(){
-
-		[ -n "$HIERARCHY" ] && export HIERARCHY=$((HIERARCHY+1)) || export HIERARCHY=0
-
-		# - Auto print init header for all scripts
-		# if [ -n "$G_PROGRAM_NAME" ]; then
-
-			# G_DIETPI-NOTIFY 3 "$G_PROGRAM_NAME" 'Init'
-
-		# fi
-
-
 	}
 
 	# DietPi-Notify
@@ -422,6 +420,26 @@
 			fi
 
 		fi
+
+	}
+
+	#-----------------------------------------------------------------------------------
+	# Whiptail
+	#-----------------------------------------------------------------------------------
+	G_WHIP_MSG_TEXT=${G_WHIP_MSG_TEXT:=0}
+	G_WHIP_MSG(){
+
+		if (( $G_USER_INPUTS )); then
+
+			whiptail --title "$G_PROGRAM_NAME" --msgbox "$G_WHIP_MSG_TEXT" --backtitle "$G_PROGRAM_NAME" 20 80
+
+		else
+
+			G_DIETPI-NOTIFY 1 "$G_WHIP_MSG_TEXT"
+
+		fi
+
+		unset G_WHIP_MSG_TEXT
 
 	}
 
