@@ -72,15 +72,6 @@ en_GB.UTF-8 UTF-8
 _EOF_
 			G_RUN_CMD dpkg-reconfigure -f noninteractive locales
 
-			# - and force locale for remote access, especially dropbear, where receiving locale from client can't be suppressed:
-			cat << _EOF_ > /etc/profile.d/99-dietpi-force-locale.sh
-# To force server locales on SSH access, as dropbear does automatically overwrite them by client values:
-export LANG=$INPUT_MODE_VALUE
-export LC_ALL=$INPUT_MODE_VALUE
-export LANGUAGE=$( echo $INPUT_MODE_VALUE | sed 's/\..*//' ):$( echo $INPUT_MODE_VALUE | sed 's/_.*//' )
-_EOF_
-			chmod +x /etc/profile.d/99-dietpi-force-locale.sh
-
 			sed -i "/AUTO_SETUP_LOCALE=/c\AUTO_SETUP_LOCALE=$INPUT_MODE_VALUE" /DietPi/dietpi.txt
 
 		else
