@@ -94,18 +94,6 @@
 		sed -i '/#Apply system locale/Q' /etc/bash.bashrc
 		sed -i '/#DietPi Additions/Q' /etc/bash.bashrc
 		#-------------------------------------------------------------------------------
-		#Fix locales according to: https://github.com/Fourdee/DietPi/pull/1402
-		if [ -f /etc/environment ]; then
-
-			rm /etc/environment
-			[ -f /etc/default/locales ] && rm /etc/default/locales
-			locale_value="$(grep '^[[:blank:]]*AUTO_SETUP_LOCALE=' /DietPi/dietpi.txt | sed 's/^.*=//')"
-			[ -n $locale_value ] || locale_value='en_GB.UTF-8'
-			/DietPi/dietpi/func/dietpi-set_software locale "$locale_value"
-			unset locale_value
-
-		fi
-		#-------------------------------------------------------------------------------
 		#Fix doubled and renamed config files:
 		#https://github.com/Fourdee/DietPi/commit/68148cec6b49afc787deca638456e1c4689e1cab#diff-8370b86e635383d521462994afe04a2d
 		[ -f /etc/apt/apt.conf.d/99force-ipv ] && rm /etc/apt/apt.conf.d/99force-ipv
@@ -137,6 +125,16 @@
 	elif (( $SUBVERSION_CURRENT == 1 )); then
 
 		#-------------------------------------------------------------------------------
+		#locale rework/reset: https://github.com/Fourdee/DietPi/issues/1430#issuecomment-364763302
+		rm /etc/profile.d/99-dietpi-force-locale.sh
+		rm /etc/environment
+		rm /etc/default/locale
+
+		/DietPi/dietpi/func/dietpi-set_software locale "$(grep -m1 '^AUTO_SETUP_LOCALE=' /DietPi/dietpi.txt | sed 's/.*=//')"
+
+		export G_WHIP_MSG_TEXT="Notice (locale):\n\nTo resolve broken Locales, they have been reset to $(grep -m1 '^AUTO_SETUP_LOCALE=' /DietPi/dietpi.txt | sed 's/.*=//').\n\nIf you had a different locale configured on this system, please use dietpi-config at a later date to re-configure."
+		G_WHIP_MSG
+		#------------------------------------------------------------------------------
 		#Removed control from DietPi-Services: https://github.com/Fourdee/DietPi/issues/1501
 		systemctl enable dnsmasq &> /dev/null
 		systemctl enable openvpn &> /dev/null
