@@ -23,6 +23,7 @@ G_DIETPI-NOTIFY | Added initiating program name, to start of line print.
 
 Bug Fixes:
 General | Resolved an issue where externally launched DietPi-Config with target menu, (eg: dietpi-config 8 1) had no effect. EG: fail connection, should go straight to networking submenu.
+General | Locales have been reworked and reset: To resolve broken Locales, they have been reset to $(grep -m1 '^AUTO_SETUP_LOCALE=' /DietPi/dietpi.txt | sed 's/.*=//').\n\nIf you had a different locale configured on this system, please use dietpi-config at a later date to re-configure: https://github.com/Fourdee/DietPi/issues/1430
 DietPi-Config | AudioPhonics I-Sabre-K2M: Resolved issue with failed installation. This is now a source build ondemand: https://github.com/Fourdee/DietPi/issues/1437
 DietPi-Services | OpenVPN and DNSMASQ (PiHole): Are no longer controlled. This is to prevent unexpected loss of connection during DietPi scripts: https://github.com/Fourdee/DietPi/issues/1501
 DietPi-Software | Nginx: Resolved failed installation when IPv6 is disabled, thanks @MichaIng: https://github.com/Fourdee/DietPi/pull/1441
@@ -33,7 +34,7 @@ DietPi-Software | phpMyAdmin: Its new default MariaDB user 'phpmyadmin' now has 
 DietPi-Software | RPi.GPIO: Resolved failed installation.
 DietPi-Software | Raspcontrol: Resolved an issue with missing webserver stack pre-req: https://github.com/Fourdee/DietPi/issues/1485
 DietPi-Software | Resolved an issue where an existing higher GPU mem split, would be overridden with a lower value, during install of certain software: https://github.com/Fourdee/DietPi/issues/1484
-DietPi-Software | qBitTorrent: Resolved issue with login on Debian Jessie, the default password is now 'adminadmin': https://github.com/Fourdee/DietPi/issues/1499
+DietPi-Software | qBitTorrent: Resolved issue with failed login on Debian Jessie, the default password is now 'adminadmin': https://github.com/Fourdee/DietPi/issues/1499
 
 Allo Web Interface v6:
 Sparky SBC: Resolved an issue where USB1.1 compatibility setting would always be applied, when usb-dac selected.
